hphp/hack/test/typecheck/constraints/tparam_class_method_bad.php
<?hh // strict

function test<T>(classname<T> $c): void {
  $c::doesNotExist();
}
